--- a/Diamon/app/src/main/res/layout/activity_page_main.xml
+++ b/Diamon/app/src/main/res/layout/activity_page_main.xml
@@ -7,8 +7,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PageMainActivity"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    android:fitsSystemWindows="true">
+   <!-- tools:openDrawer="start"-->
+
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -30,13 +31,13 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:weightSum="5"
+
 >
         <soup.neumorphism.NeumorphCardView
             style="@style/Widget.Neumorph.CardView"
-            android:layout_width="0dp"
+            android:layout_width="75dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+
             >
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -50,18 +51,20 @@
 
 
 
-        <soup.neumorphism.NeumorphCardView
+     <!--   <soup.neumorphism.NeumorphCardView
             style="@style/Widget.Neumorph.CardView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
             >
         <ImageView
             android:id="@+id/notif_cloch"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_notification" />
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/ic_notification"
+           />
         </soup.neumorphism.NeumorphCardView>
+        -->
     </LinearLayout>
 
     <LinearLayout
@@ -78,18 +81,30 @@
             android:text="2000.125 XOF"
             android:textStyle="bold" />
     </LinearLayout>
+    <!--
+        <soup.neumorphism.NeumorphCardView
+            style="@style/Widget.Neumorph.ImageView"
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            app:neumorph_shapeType="flat"
+            >
+           <com.jjoe64.graphview.GraphView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+               android:background="#D5DFF3"
+                android:id="@+id/graph"/>-->
 
-    <soup.neumorphism.NeumorphImageView
-        style="@style/Widget.Neumorph.ImageView"
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
+  <!--  <com.github.mikephil.charting.charts.LineChart-->
+        <com.jjoe64.graphview.GraphView
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
-        android:layout_gravity="center"
-        android:layout_margin="5dp"
-        app:neumorph_backgroundColor="#D5DFF3"
-        app:neumorph_shapeType="flat"
-        app:srcCompat="@drawable/chart_s" />
+        android:id="@+id/graph"/>
+    <!--</soup.neumorphism.NeumorphCardView>-->
 
     <LinearLayout
         android:id="@+id/sell_buy"
@@ -99,7 +114,6 @@
         android:orientation="horizontal"
         android:gravity="center"
         android:weightSum="3">
-
 
     <soup.neumorphism.NeumorphButton
         style="@style/Widget.Neumorph.Button"
