--- a/Diamon/app/src/main/res/menu/main_menu.xml
+++ b/Diamon/app/src/main/res/menu/main_menu.xml
@@ -1,34 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+<group android:checkableBehavior="single">
+
         <item android:id="@+id/home"
             android:title="home"
             android:icon="@drawable/ic_home"/>
 
         <item android:id="@+id/setting"
-            android:title="Setting"
-            android:icon="@drawable/ic_setting"/>
-
+            android:title="Transactions"
+            android:icon="@drawable/ic_cached"/>
 
         <item android:id="@+id/deposit"
             android:title="Deposit"
             android:icon="@drawable/ic_down">
         </item>
+
         <item android:id="@+id/send"
             android:title="Send"
             android:icon="@drawable/ic_send">
         </item>
+
         <item android:id="@+id/withdrawal"
             android:title="withdrawal"
             android:icon="@drawable/ic_wallet">
         </item>
+
         <item android:id="@+id/blp"
             android:title="been local provider"
             android:icon="@drawable/ic_local">
         </item>
+
         <item android:id="@+id/identity"
-            android:title="Identity"
+            android:title="Profile"
             android:icon="@drawable/ic_person">
         </item>
-
+</group>
 </menu>
