--- a/Diamon/app/src/main/res/layout/activity_deposit.xml
+++ b/Diamon/app/src/main/res/layout/activity_deposit.xml
@@ -11,30 +11,6 @@
     tools:context=".DepositActivity">
 
 
-    <LinearLayout
-        android:id="@+id/linear"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="5"
-        android:layout_weight="1">
-        <soup.neumorphism.NeumorphCardView
-            style="@style/Widget.Neumorph.CardView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-
-            >
-            <ImageView
-                android:id="@+id/Button_menu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_menu" />
-        </soup.neumorphism.NeumorphCardView>
-
-
-    </LinearLayout>
-
 
 
 
@@ -44,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:neumorph_shapeType="flat"
-        android:layout_weight="6"
+        android:layout_weight="7"
         app:layout_constraintTop_toBottomOf="@+id/linear"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -73,13 +49,32 @@
                 android:layout_gravity="center"
                 android:src="@drawable/ic_down"/>
 
+            <soup.neumorphism.NeumorphCardView
+                style="@style/Widget.Neumorph.CardView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1.2"
+                app:neumorph_shapeType="pressed"
+                android:layout_margin="5dp"
+                >
+
+                <Spinner
+                    android:id="@+id/operateur"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    android:ems="10"
+                    android:hint="Agent de payement"
+                    android:background="@android:color/transparent"
+                    />
+            </soup.neumorphism.NeumorphCardView>
 
             <soup.neumorphism.NeumorphCardView
                 style="@style/Widget.Neumorph.CardView"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1.7"
-                app:neumorph_shapeType="basin"
+                android:layout_weight="1.2"
+                app:neumorph_shapeType="flat"
                 android:layout_margin="5dp"
                 >
 
@@ -101,9 +96,9 @@
                 style="@style/Widget.Neumorph.CardView"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1.7"
+                android:layout_weight="1.2"
                 android:layout_margin="5dp"
-                app:neumorph_shapeType="basin"
+                app:neumorph_shapeType="flat"
                 >
 
                 <EditText
@@ -114,7 +109,7 @@
                     android:ems="10"
                     android:hint="Amount"
                     android:drawableLeft="@drawable/ic_money"
-                    android:inputType="text"
+                    android:inputType="number"
                     android:textCursorDrawable="@drawable/cursor"
                     android:background="@android:color/transparent"
                     />
@@ -124,7 +119,7 @@
                 app:neumorph_lightSource="leftTop"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:layout_weight="1.2"
+                android:layout_weight="1"
                 app:neumorph_shadowElevation="1dp"
                 android:layout_margin="5dp"
 
@@ -138,12 +133,13 @@
                     android:text="Confirm" />
 
             </soup.neumorphism.NeumorphCardView>
+
             <soup.neumorphism.NeumorphButton
                 style="@style/Widget.Neumorph.Button"
                 android:id="@+id/btn_deposit"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:layout_weight="1.5"
+                android:layout_weight="1.2"
                 app:neumorph_shapeType="flat"
                 android:text="Deposit"
                 android:layout_gravity="center"
