--- a/Diamon/app/src/main/res/values/colors.xml
+++ b/Diamon/app/src/main/res/values/colors.xml
@@ -10,4 +10,10 @@
     <color name="neuwhite">#F2F2F2</color>
     <color name="vert1">#05C003</color>
     <color name="red1">#C60303</color>
+    <color name="my_blue">#D5DFF3</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="light_blue_900">#FF01579B</color>
+    <color name="light_blue_A200">#FF40C4FF</color>
+    <color name="light_blue_A400">#FF00B0FF</color>
+    <color name="black_overlay">#66000000</color>
 </resources>
