--- a/Diamon/app/src/main/res/layout/activity_deposit.xml
+++ b/Diamon/app/src/main/res/layout/activity_deposit.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:background="@color/neuwhite"
     android:weightSum="7"
-    tools:context=".DepositActivity">
+    tools:context=".Vue.DepositActivity">
 
 
 
