--- a/Diamon/app/src/main/res/layout/activity_page_main.xml
+++ b/Diamon/app/src/main/res/layout/activity_page_main.xml
@@ -6,7 +6,7 @@
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PageMainActivity"
+    tools:context=".Vue.PageMainActivity"
     android:fitsSystemWindows="true">
    <!-- tools:openDrawer="start"-->
 
