--- a/Diamon/app/src/main/res/layout/activity_transactions.xml
+++ b/Diamon/app/src/main/res/layout/activity_transactions.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TransactionsActivity">
+    tools:context=".Vue.TransactionsActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
