--- a/Diamon/app/src/main/res/layout/activity_main.xml
+++ b/Diamon/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="0.9"
-        android:text="Sign up"
+        android:text="LogIn"
         android:textSize="40dp"
         android:textStyle="bold"
         android:layout_gravity="center"
@@ -38,7 +38,7 @@
     style="@style/Widget.Neumorph.CardView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.3"
+        android:layout_weight="1.2"
         android:layout_margin="5dp"
       >
 
@@ -60,7 +60,7 @@
         style="@style/Widget.Neumorph.CardView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.3"
+        android:layout_weight="1.2"
         android:layout_margin="5dp"
         app:neumorph_shapeType="pressed"
         >
@@ -80,27 +80,22 @@
     </soup.neumorphism.NeumorphCardView>
 
     <soup.neumorphism.NeumorphCardView
-        style="@style/Widget.Neumorph.CardView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="1.3"
-        app:neumorph_shapeType="basin"
-        android:layout_margin="5dp"
+        android:layout_weight="0.8"
+        app:neumorph_shapeType="flat"
+        app:neumorph_lightSource="leftTop"
+        app:neumorph_shadowElevation="1dp"
         >
-
-        <EditText
-            android:id="@+id/txt2"
+        <Switch
+            android:id="@+id/rmb"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:ems="10"
-            android:hint="Confirm password"
-            android:inputType="textPassword"
-            android:drawableLeft="@drawable/ic_done_all"
-            android:textCursorDrawable="@drawable/cursor"
-            android:background="@android:color/transparent"
-            />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="5dp"
+            android:text="Remember me" />
     </soup.neumorphism.NeumorphCardView>
+
     <soup.neumorphism.NeumorphButton
         style="@style/Widget.Neumorph.Button"
         android:id="@+id/btn_sign_up"
@@ -108,13 +103,21 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         app:neumorph_shapeType="flat"
-        android:text="Sign Up"
+        android:text="LogIn"
         android:layout_margin="5dp"
         android:layout_gravity="center"
         >
 
-
     </soup.neumorphism.NeumorphButton>
+
+
+    <TextView
+        android:id="@+id/register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Create Account"
+        android:textColor="#5A5A5A" />
 
 
 </LinearLayout>
