--- a/Diamon/app/src/main/res/layout/activity_page_main.xml
+++ b/Diamon/app/src/main/res/layout/activity_page_main.xml
@@ -23,6 +23,7 @@
     android:background="@color/neuwhite"
     android:orientation="vertical"
     android:weightSum="10"
+
    >
 
     <LinearLayout
@@ -30,9 +31,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="horizontal"
+        android:background="@color/white"
+        android:orientation="horizontal">
 
->
         <soup.neumorphism.NeumorphCardView
             style="@style/Widget.Neumorph.CardView"
             android:layout_width="75dp"
@@ -68,18 +69,79 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linear_prix"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="5"
+        android:orientation="horizontal"
+        android:layout_margin="10dp"
         android:gravity="center">
+    <androidx.cardview.widget.CardView
+        android:id="@+id/linear_prix"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardCornerRadius="200dp">
 
-        <TextView
-            android:id="@+id/prix"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2000.125 XOF"
-            android:textStyle="bold" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/neuwhite">
+
+            <TextView
+                android:id="@+id/id_prix"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="80dp"
+                android:text="2000.125 XOF"
+                android:textSize="25dp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.547"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/id_valeur"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="DMD=$ 0,0001"
+                android:textStyle="bold"
+                android:layout_marginStart="104dp"
+                android:layout_marginEnd="30dp"
+                app:layout_constraintBottom_toTopOf="@+id/btn_graph"
+                app:layout_constraintEnd_toStartOf="@+id/id_taux"
+                app:layout_constraintHorizontal_bias="0.591"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/id_prix"
+                app:layout_constraintVertical_bias="0.595" />
+
+            <TextView
+                android:id="@+id/id_taux"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="90dp"
+
+                android:text="+12,8"
+                android:textColor="@color/vert1"
+                app:layout_constraintBottom_toTopOf="@+id/btn_graph"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/id_prix"
+                app:layout_constraintVertical_bias="0.595" />
+
+            <soup.neumorphism.NeumorphButton
+                android:id="@+id/btn_graph"
+                style="@style/Widget.Neumorph.Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="44dp"
+                android:layout_weight="1"
+                android:text="Graph"
+                android:textColor="@color/vert1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
     </LinearLayout>
     <!--
         <soup.neumorphism.NeumorphCardView
@@ -96,15 +158,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                android:background="#D5DFF3"
-                android:id="@+id/graph"/>-->
+                android:id="@+id/graph"/>
 
-  <!--  <com.github.mikephil.charting.charts.LineChart-->
+   <com.github.mikephil.charting.charts.LineChart
         <com.jjoe64.graphview.GraphView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
         android:id="@+id/graph"/>
-    <!--</soup.neumorphism.NeumorphCardView>-->
+  </soup.neumorphism.NeumorphCardView>-->
 
     <LinearLayout
         android:id="@+id/sell_buy"
@@ -137,18 +199,18 @@
         android:textColor="@color/red1" />
 
     </LinearLayout>
+<!--
     <soup.neumorphism.NeumorphCardView
         style="@style/Widget.Neumorph.CardView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
         app:neumorph_shapeType="basin">
-    <LinearLayout
+        <LinearLayout
         android:id="@+id/liste_crypto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-       >
+        android:orientation="vertical">
 
         <soup.neumorphism.NeumorphCardView
             style="@style/Widget.Neumorph.CardView"
@@ -175,6 +237,7 @@
         </LinearLayout>
 
         </soup.neumorphism.NeumorphCardView>
+
         <soup.neumorphism.NeumorphCardView
             style="@style/Widget.Neumorph.CardView"
             android:layout_width="match_parent"
@@ -199,8 +262,8 @@
                 android:text="$687.34"/>
         </LinearLayout>
         </soup.neumorphism.NeumorphCardView>
-    </LinearLayout>
-    </soup.neumorphism.NeumorphCardView>
+        </LinearLayout>
+    </soup.neumorphism.NeumorphCardView>-->
 
 </LinearLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
