--- a/Diamon/app/src/main/res/layout/activity_profile.xml
+++ b/Diamon/app/src/main/res/layout/activity_profile.xml
@@ -1,43 +1,308 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Vue.ProfileActivity">
-
-    <Button
-        android:id="@+id/btn_user"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:backgroundTint="#232222"
-        android:text="User insert "
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.255"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btn_user_select"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:backgroundTint="#49BDBD"
-        android:text="User select "
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.802"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+    android:orientation="vertical"
+    tools:context=".Vue.ProfileActivity"
+    android:background="@color/neuwhite"
+    android:weightSum="12">
+    <LinearLayout
+        android:id="@+id/linear"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:padding="10dp"
+        android:background="@drawable/border_set">
     <TextView
-        android:id="@+id/txt_user"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="116dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.457"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_user" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_width="wrap_content"
+        android:text="Update Account"
+        android:textStyle="bold"
+        android:textSize="20dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="11"
+        android:orientation="vertical">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profil_img"
+            android:layout_height="100dp"
+            android:src="@drawable/prof"
+            android:layout_width="100dp"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+      android:gravity="center"
+        >
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="ACCOUNT ID :"
+            android:textStyle="bold"
+            android:textSize="15dp"
+            />
+            <TextView
+                android:id="@+id/txt_account_id"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+
+                android:text="0"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:textIsSelectable="true"
+                />
+    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:weightSum="6"
+            android:background="@drawable/border_raduis"
+           >
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1.6"
+                android:text="Name:"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_marginLeft="10dp"
+
+               />
+            <EditText
+                android:id="@+id/txt_name"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:ems="10"
+                android:inputType="text"
+                android:layout_weight="4.4"
+                android:background="@android:color/transparent"
+                android:textCursorDrawable="@drawable/cursor"
+                    />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:weightSum="6"
+            android:background="@drawable/color_unset_pseudo"
+            >
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1.6"
+                android:text="Pseudo:"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_marginLeft="10dp"
+
+                />
+
+            <EditText
+                android:id="@+id/txt_pseudo"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:ems="10"
+                android:inputType="text"
+                android:layout_weight="4.4"
+                android:editable="false"
+                android:background="@android:color/transparent"
+                android:textCursorDrawable="@drawable/cursor"
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:weightSum="6"
+            android:background="@drawable/border_raduis"
+            >
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1.6"
+                android:text="Phone:"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_marginLeft="10dp"
+                />
+            <EditText
+                android:id="@+id/txt_numero"
+                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="4.4"
+                android:ems="10"
+                android:inputType="phone"
+                android:background="@android:color/transparent"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:weightSum="6"
+            android:background="@drawable/border_raduis"
+            >
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1.6"
+                android:text="Email:"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_marginLeft="10dp"
+
+                />
+            <EditText
+                android:id="@+id/txt_mail"
+                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="4.4"
+                android:ems="10"
+                android:inputType="textEmailAddress"
+                android:background="@android:color/transparent"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:weightSum="6"
+            android:background="@drawable/border_raduis"
+            >
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1.6"
+                android:text="Pays:"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_marginLeft="10dp"
+
+                />
+            <EditText
+                android:id="@+id/txt_pays"
+                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="4.4"
+                android:ems="10"
+                android:inputType="text"
+                android:background="@android:color/transparent"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:weightSum="6"
+            android:background="@drawable/border_raduis"
+            >
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1.6"
+                android:text="Pay agent:"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_marginLeft="10dp"
+
+                />
+            <EditText
+                android:id="@+id/txt_payement_agent"
+                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="4.4"
+                android:ems="10"
+                android:inputType="text"
+                android:background="@android:color/transparent"
+                />
+        </LinearLayout>
+
+      <!--  <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:weightSum="6"
+            android:background="@drawable/border_raduis"
+            >
+
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1.5"
+                android:text="Password:"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_marginLeft="10dp"
+
+                />
+            <EditText
+                android:id="@+id/txt_password"
+                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="4.5"
+                android:ems="10"
+                android:inputType="textPassword"
+                android:background="@android:color/transparent"
+                />
+        </LinearLayout> -->
+        <soup.neumorphism.NeumorphButton
+            style="@style/Widget.Neumorph.Button"
+            android:id="@+id/btn_update_profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:neumorph_shapeType="flat"
+            android:text="Update"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            >
+
+        </soup.neumorphism.NeumorphButton>
+
+    </LinearLayout>
+
+
+
+</androidx.appcompat.widget.LinearLayoutCompat>
