--- a/Diamon/app/src/main/res/menu/main_menu.xml
+++ b/Diamon/app/src/main/res/menu/main_menu.xml
@@ -5,35 +5,43 @@
 
         <item android:id="@+id/home"
             android:title="home"
-            android:icon="@drawable/ic_home"/>
-
-        <item android:id="@+id/setting"
-            android:title="Transactions"
-            android:icon="@drawable/ic_cached"/>
-
-        <item android:id="@+id/deposit"
-            android:title="Deposit"
+            android:icon="@drawable/ic_home">
+        </item>
+        <item android:id="@+id/buy"
+            android:title="Buy"
             android:icon="@drawable/ic_down">
         </item>
-
         <item android:id="@+id/send"
             android:title="Send"
             android:icon="@drawable/ic_send">
         </item>
-
         <item android:id="@+id/withdrawal"
             android:title="withdrawal"
             android:icon="@drawable/ic_wallet">
         </item>
-
+        <item android:id="@+id/setting"
+            android:title="Transactions"
+            android:icon="@drawable/ic_cached">
+        </item>
         <item android:id="@+id/blp"
-            android:title="been local provider"
+            android:title="Local provider"
             android:icon="@drawable/ic_local">
         </item>
-
-        <item android:id="@+id/identity"
+        <item android:id="@+id/profile"
             android:title="Profile"
             android:icon="@drawable/ic_person">
+        </item>
+        <item android:id="@+id/chat"
+            android:title="Chat"
+            android:icon="@drawable/ic_chat">
+        </item>
+        <item android:id="@+id/logout"
+            android:title="Logout"
+            android:icon="@drawable/ic_logout">
+        </item>
+        <item android:id="@+id/help"
+            android:title="FAQ"
+            android:icon="@drawable/ic_help">
         </item>
 </group>
 </menu>
