--- a/Diamon/app/src/main/res/values/colors.xml
+++ b/Diamon/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="neuwhite">#F2F2F2</color>
     <color name="vert1">#05C003</color>
-    <color name="red1">#C60303</color>
+    <color name="red1">#FA0B0B</color>
     <color name="my_blue">#D5DFF3</color>
     <color name="light_blue_600">#FF039BE5</color>
     <color name="light_blue_900">#FF01579B</color>
