--- a/Diamon/app/src/main/res/layout/activity_buy.xml
+++ b/Diamon/app/src/main/res/layout/activity_buy.xml
@@ -36,7 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="Deposit"
+                android:text="Buy DMD"
                 android:textSize="40dp"
                 android:textStyle="bold"
                 android:layout_gravity="center"
