--- a/Diamon/app/src/main/res/drawable/border_raduis_top.xml
+++ b/Diamon/app/src/main/res/drawable/border_raduis_top.xml
@@ -3,7 +3,8 @@
     <item>
         <shape
             android:shape="rectangle">
-            <stroke android:width="1dp" android:color="#F6F5F5" />
+            <!--<stroke android:width="1dp" android:color="#F6F5F5" />-->
+            <stroke android:width="1dp" android:color="@color/neuwhite" />
             <solid android:color="@color/neuwhite" />
             <corners
                 android:bottomLeftRadius="0dp"
@@ -22,8 +23,8 @@
                 android:bottomRightRadius="0dp"
                 android:topLeftRadius="20dp"
                 android:topRightRadius="20dp" />
-            <stroke android:width="1dp" android:color="#F6F5F5" />
-            <solid android:color="@color/white" />
+            <stroke android:width="1dp" android:color="@color/neuwhite" />
+            <solid android:color="@color/neuwhite" />
         </shape>
     </item>
 
